--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^1.27.0",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
   },
