--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "rn-rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "node index.js",
-    "start": "nodemon index.js"
+    "test": "ts-node ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,14 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@tsconfig/node16": "^1.0.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
