--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "./src/index.ts",
   "scripts": {
     "test": "ts-node ./src/index.ts",
-    "start": "ts-node ./src/index.ts",
+    "start": "node dist/index.js",
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "postinstall": "tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Winston-Saarloos/RN-REST-API.git"
+  },
+  "engines": {
+    "node": "16.14.2"
   },
   "author": "",
   "license": "ISC",
