--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "tsc --build --clean",
     "postinstall": "tsc",
     "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku main"
   },
   "repository": {
     "type": "git",
